--- a/reformatted_project_suggestion.ipynb
+++ b/reformatted_project_suggestion.ipynb
@@ -21,18 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['cmd', '/c', 'update_and_process_data.bat'], returncode=0)"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running: download_static.py\n",
+      "Running: transform_calendar_calendar_dates.py\n",
+      "Running: transform_routes.py\n",
+      "Running: transform_stop_times.py\n",
+      "Running: transform_stops.py\n",
+      "Running: transform_transfers.py\n",
+      "Running: transform_trips.py\n",
+      "All scripts finished.\n"
+     ]
     }
    ],
    "source": [
@@ -40,14 +44,29 @@
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime\n",
+    "import sys\n",
     "\n",
-    "# updating and processing data\n",
-    "subprocess.run([\"cmd\",\"/c\",\"update_and_process_data.bat\"])\n"
+    "# downloads and updates data\n",
+    "\n",
+    "exclude = {\"transform_universal.py\"}\n",
+    "\n",
+    "scripts_dir = os.getcwd()\n",
+    "\n",
+    "scripts = sorted(\n",
+    "    f for f in os.listdir(scripts_dir)\n",
+    "    if f.endswith(\".py\") and f not in exclude\n",
+    ")\n",
+    "\n",
+    "for f in scripts:\n",
+    "    print(f\"Running: {f}\")\n",
+    "    subprocess.run([sys.executable, f], cwd=scripts_dir, check=True)\n",
+    "\n",
+    "print(\"All scripts finished.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +216,7 @@
        "[17230 rows x 1 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +327,7 @@
        "9             Florenc     5190"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +590,7 @@
        "61091                Háje     4564           1"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +794,7 @@
        "4    L1110       8145.000000     02:15:45              T10"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +915,7 @@
        "4     L617       52.0              617"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1043,7 @@
        "[847 rows x 1 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1162,7 @@
        "9       L5                5      581"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
