--- a/old/project_updated_plots.ipynb
+++ b/old/project_updated_plots.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "def test_compute_high_visibility():\n",
     "    stop_times_test = pd.DataFrame({\n",
-    "        'stop_id': [1, 1, 2, 3, 3, 3],\n",
+    "        'stop_id': [1, 1, 2, 3, 3, 3]\n",
     "        'trip_id': ['a','b','c','d','e','f']})   \n",
     "    stops_test = pd.DataFrame({\n",
     "        'stop_id': [1, 2, 3],\n",
